# file-transfering-types

./: .gitignore  README.MD  app.py  conclusion.md  pyproject.toml  utils.py
requests_to_api/: local_requests.py
templates/: index.html
