[tool.poetry]
name = "file-transfer"
version = "0.1.0"
description = ""
authors = ["gvensye <bnlvdn7483@gmail.com>"]
readme = "README.md"
packages = [{include = "file_transfer"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
requests = "^2.31.0"
brotli = "^1.1.0"
brotli-asgi = "^1.4.0"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
